# api.vimalmenon.com

./: .eslintrc.js  .gitignore  Dockerfile  README.md  main.py  notes.txt  package-lock.json  package.json  pyproject.toml  serverless.yml  tox.ini  tsconfig.json
.github/workflows/: check.yml  deploy.yaml
api/apis/: link.py  vim.py
api/apis/admin/: vim.py
api/config/: env.py
api/exceptions/: exception.py
api/managers/aws/: session.py
api/managers/dynamodb/: dynamo_db_table.py  table_abstract.py
api/models/: vim_model.py
api/serializers/: vim_command.py
api/services/: vim_service.py
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  deployment.yaml
src/: types.d.ts
src/common/: response.ts
src/config/: awsService.ts  constants.ts  index.ts
src/helper/: db.ts  index.ts  socialMedia.ts  subject.ts  topic.ts  tutorial.ts  tutorials.ts
src/tutorial/: getTutorials.ts
