[tool.poetry]
name = "api"
version = "0.0.1"
description = "APi for VimalMenon.com"
authors = ["Vimal Menon <69777626+vimalsmenon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.32.1"
boto3 = "^1.35.81"


[tool.poetry.group.dev.dependencies]
tox = "^4.23.2"
flake8 = "^7.1.1"
black = "^24.10.0"
boto3-stubs = "^1.35.80"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "main:run"
