[tool.poetry]
name = "api"
version = "0.0.1"
description = "APi for VimalMenon.com"
authors = ["Vimal Menon <69777626+vimalsmenon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.32.1"
boto3 = "^1.35.97"


[tool.poetry.group.dev.dependencies]
tox = "^4.23.2"
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.13.0"
flake8-import-order-spoqa = "^1.5.0"
pytest = "^8.3.4"
boto3-stubs = "^1.35.97"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "main:run"
